--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "@react-native-assets/slider": "^7.0.2",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-paper": "^5.9.1",
+    "react-native-reanimated": "~2.14.4",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
