--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-material-menu": "^2.0.0",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
