--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-country-flag": "^1.1.9",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-material-menu": "^2.0.0",
     "react-native-paper": "^5.9.1",
